<resources>
    <string name="app_name">MediCare</string>
    <string name="title">Appointment</string>
    <string name="appointment_title">Appointment Title</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="date_time">Select Time and Date</string>
    <string name="result">01-01-2020 12:00</string>

    <string name="button">Done</string>
    <string name="med_name">Medicine Name</string>
    <string name="medicine">Medicine</string>
    <string name="med_description">Your Medicines are here</string>
    <string name="med_button">Medicine button</string>
    <string name="appoint">Appointment</string>
    <string name="appoint_description">Take Appointments from here</string>
    <string name="appoint_button">Appointment button</string>
    <string name="users">Users</string>
    <string name="selectInstruction">Select Instructions</string>
    <string name="before_eating">Before Eating</string>
    <string name="while_eating">While Eating</string>
    <string name="after_eating">After Eating</string>
    <string name="not_matters">Not Matters</string>
    <string name="med_color">Medicine Colour</string>
    <string name="pick_color">Pick Colour</string>
    <string name="med_image">Medicine Image</string>
    <string name="user_description">View Users</string>
    <string name="users_button">Users button</string>
    <string name="reports">Reports</string>
    <string name="ongoing_treatment">Onging Treatment</string>
    <string name="no_of_days">Number of Days</string>
    <string name="set_time">Set Medicine Time</string>
    <string name="dose">12:00</string>
    <string name="repeat">Repeat</string>
    <string name="schedule">Schedule</string>
    <string name="duration">Duration</string>
    <string name="med_img_des">Preview of Medicine Image</string>
    <string name="start_date">01-01-2020</string>
    <string name="date">Date</string>
    <string name="report_description">Save your Reports here</string>
    <string name="reports_button">Reports button</string>
    <string name="settings">Settings</string>
    <string name="settings_button">Settings button</string>
    <string name="setting_description">Edit Settings</string>
    <string name="Report">Report</string>
    <string name="choose">Choose File</string>
    <string name="Reports">Reports Description</string>
    <string name="Save">Save</string>
    <string name="show">Show Report</string>
    <string name="fileName">Enter File Name</string>
    <string name="upload">Upload</string>
    <string name="showUploads">Show Uploads</string>
    <string name="savedReports">Saved All Reports</string>
    <string name="no_report">No Report</string>
    <string name="no_users">No Users</string>

    <string name="no_appointment">No Appointments</string>

    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="username">E-mail</string>
    <string name="mobile">Mobile No.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered ? </string>
    <string name="register"> REGISTER </string>
    <string name="login">"LOGIN"</string>
    <string name="already_login">Already Registered ?</string>

    <string name="card_report_description">Desciption</string>
    <string name="card_report_filename">Filename</string>
    <string name="appbar_scrolling_view_behavior" />
    <string name="no_Medicine">No Medicine</string>
    <string name="delete_button_for_appointment">deleteButtonForAppointment</string>
    <string name="show_appointments">Show Appointments</string>
    <string name="show_reports">Show Reports</string>
    <string name="report_icon">Report Icon</string>
    <string name="appointment_icon">Appointment Icon</string>
    <string name="show_medicines">Show Medicines</string>
    <string name="medicine_activity_logo">Medicine Activity Logo</string>
    <string name="browse_report_file">browse_report_file</string>
    <string name="report_file_camera">report_file_camera</string>
    <string name="selected_report_file">selected_report_file</string>
    <string name="image_of_medicine">Image Of Medicine</string>
    <string name="delete_user_btn">Delete User Btn</string>
    <string name="user_image">User\'s Image</string>
    <string name="user_name">User\'s Name</string>
    <string name="user_gender">User\'s Gender</string>
    <string name="user_s_age">User\'s Age</string>
    <string name="add_appointments_button">Add Appointments Button</string>
    <string name="add_users_button">Add Users Button</string>
    <string name="invalid_name">Please enter a valid name</string>
    <string name="invalid_instruction">Please select an instruction</string>
    <string name="invalid_date">Set the date</string>
    <string name="invalid_filename">Please enter a filename</string>
    <string name="invalid_report_filename">Please enter the report filename</string>
    <string name="invalid_appointment_title">Enter a valid Title</string>
    <string name="invalid_doctor_name">Enter Doctor\'s name</string>
    <string name="invalid_report_description">Enter description</string>
    <string name="invalid_image">"Please add Image "</string>
    <string name="invalid_username">Enter valid username</string>
    <string name="invalid_password">Please enter password</string>
    <string name="invalid_registration_username">Enter valid and unique username</string>
    <string name="invalid_registration_name">Enter name</string>
    <string name="invalid_registration_password">Enter password</string>
    <string name="invalid_registration_age">Enter age</string>
    <string name="invalid_registration_mobile">Enter mobile number</string>
    <string name="invalid_registration_valid_mobile">Enter valid mobile number</string>
    <string name="user_name_user_profile">User Name</string>
    <string name="logout_button">Logout Button</string>
    <string name="user_profile_photo">User Profile Photo</string>
    <string name="medicine_notification_image">Medicine Notification Image</string>
    <string name="medicine_instruction">Medicine Instruction</string>
    <string name="medicine_date">Medicine Start Date</string>
    <string name="it_is_time_to_take_medicine">It is time to take Medicine</string>
    <string name="you_have_an_appointment">You have an Appointment</string>
    <string name="appointment_date">Appointment Date</string>
</resources>
