<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ReportUIActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/pink"
    android:layout_marginBottom="70dp"
    >
    <ImageView
        android:layout_width="60dp"
        android:layout_marginLeft="70dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_filter_frames_black_24dp"
        />
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="235dp"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        android:text="@string/Report"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"

        android:textColor="@color/cardview_light_background"
        />
</LinearLayout>

    <EditText
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:hint="@string/Reports"
        android:textSize="30dp"
        android:layout_marginBottom="20dp"
        />
    <EditText
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:hint="@string/fileName"
        android:textSize="30dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/filename"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/choose"
        android:id="@+id/choose"
        android:layout_marginBottom="10dp"
        />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/image"

        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <Button
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:text="@string/upload"
            android:id="@+id/upload"
            />
    <TextView
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/showUploads"
        android:textSize="22dp"
        android:id="@+id/show"

        />

</LinearLayout>.

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/Save"

        />
</LinearLayout>