<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedicineNotification"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginBottom="200dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:gravity="center"
        android:hint="@string/it_is_time_to_take_medicine"/>

    <ImageView
        android:id="@+id/medicine_image_notification"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/medicine_notification_image" />

    <TextView
        android:id="@+id/medicine_name_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:gravity="center"
        android:hint="@string/med_name"/>


    <TextView
        android:id="@+id/medicine_instruction_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/medicine_instruction"/>


</LinearLayout>