<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Appointment_Notification"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginBottom="200dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginBottom="50dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/you_have_an_appointment"/>

    <TextView
        android:id="@+id/appointment_name_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:hint="@string/appointment_title"
        android:gravity="center"/>


    <TextView
        android:id="@+id/appointment_dr_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:hint="@string/doctor_name"
        android:gravity="center"/>

    <TextView
        android:id="@+id/appointment_date_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:hint="@string/appointment_date"
        android:gravity="center"/>

</LinearLayout>