<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="italic"

            android:textColor="@color/primaryTextColor"
            android:textSize="50dp"
            />
        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="80dp"
            android:drawableLeft="@drawable/username"
            android:hint="@string/username"
            android:inputType="text"
            tools:layout_editor_absoluteX="206dp"
            tools:layout_editor_absoluteY="238dp" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="387dp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            tools:layout_editor_absoluteX="187dp"
            tools:layout_editor_absoluteY="524dp"/>
        <!--            android:onClick="loginchecking"-->


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/not_registered" />

            <TextView
                android:id="@+id/textview_register"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:padding="5dp"
                android:textColor="#2191F1"
                android:text="@string/register" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>