<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentUIActivity"
    android:gravity="top"
    android:orientation="vertical">
<LinearLayout
    android:orientation="horizontal"
    android:background="@color/pink"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginBottom="180dp">
    <ImageView
        android:layout_width="40dp"
        android:layout_marginLeft="70dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_today_black_24dp"
        />

    <TextView
        android:layout_width="235dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:layout_marginLeft="50dp"
        android:fontFamily="@font/galada"
        android:text="@string/title"
        android:textColor="@color/cardview_light_background"
        android:textSize="30dp"
        android:textStyle="bold" />
</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="50dp"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_event_note_black_24dp"
            android:layout_margin="15dp"/>
        <EditText
        android:hint="@string/appointment_title"
            android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="40dp" />
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">
    <ImageView
        android:layout_margin="15dp"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_person_black_24dp"/>
    <EditText
        android:hint="@string/doctor_name"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"

        />
</LinearLayout>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="50dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/date_time" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="50dp"
            android:text="@string/result"
            android:textSize="20dp"

            />
    </LinearLayout>

    <Button
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/button"
        android:fontFamily="@font/cormorant_upright_semibold"
        android:textStyle="italic"

        />
</LinearLayout>
</LinearLayout>