<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/itemView">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="start">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    tools:ignore="UselessParent">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">
                        <ImageView
                            android:id="@+id/set_user_image"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="5dp"
                            android:contentDescription="@string/user_image" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_marginStart="10dp"
                            android:gravity="start|center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/set_user_name"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:gravity="start"
                                android:layout_margin="3dp"
                                android:hint="@string/user_name"
                                />

                            <TextView
                                android:id="@+id/set_user_gender"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:gravity="start"
                                android:layout_margin="3dp"
                                android:hint="@string/user_gender"
                                />
                            <TextView
                                android:id="@+id/set_user_age"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:gravity="start"
                                android:layout_margin="3dp"
                                android:hint="@string/user_s_age"
                                />
                        </LinearLayout>

                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/delete_user"
                    android:src="@drawable/delete_user"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:layout_marginEnd="0dp"
                    android:textSize="12sp"
                    android:contentDescription="@string/delete_user_btn" />


            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>